finish create class